# sys-guage

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  arduino_config.json  main.ino  main.py  requirements.txt  testing.py
.github/workflows/: ci.yml  release.yml
arduino/: main.ino
deploy/systemd/system/: sysguage.service.in
deploy/systemd/user/: sysguage.service
deploy/udev/: 99-sysguage.rules
scripts/: install-system-service.sh  install-udev-rule.sh  install-user-service.sh
src/: main.rs  sysguage.cpp
